codama-macros/tests/codama_attribute/type_nodes/number_type_node/invalid_endian.fail.rs
use codama::codama;

#[codama(type = number(u32, endian = invalid))]
pub struct Test;

fn main() {}
